--- a/provider/aws/pom.xml
+++ b/provider/aws/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>core</artifactId>
         <groupId>io.cscanner</groupId>
+        <artifactId>core</artifactId>
         <version>master-SNAPSHOT</version>
         <relativePath>../../</relativePath>
     </parent>
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.cscanner</groupId>
-            <artifactId>core</artifactId>
+            <groupId>io.cscanner.core</groupId>
+            <artifactId>engine</artifactId>
             <version>master-SNAPSHOT</version>
         </dependency>
         <dependency>
